--- a/views/index.pug
+++ b/views/index.pug
@@ -8,3 +8,4 @@ block content
             h2 MyCookBook.uz
             a(href="/recipes/new" class='btn btn-primary')  New Recipe
         img(src="img/cook.jpg", alt="Error")
+        p  This web application was created to fulfill Web Technology module’s requirements and does not represent an actual company or service
